--- a/src/styles/article.style.css
+++ b/src/styles/article.style.css
@@ -1,9 +1,14 @@
 .article{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 200vh;
+    position: relative;
+    width: 400px;
+    left: 50%;
+    top: -150px;
     margin-top: 300px;
+    
+
 }
+
 
 .article p{
     margin-top: 100px;
@@ -11,4 +16,8 @@
 
 .articlesList{
     margin-top: 200px;
+}
+
+.pictureInPost{
+    width: 400px;
 }
