--- a/src/styles/list.style.css
+++ b/src/styles/list.style.css
@@ -1,6 +1,6 @@
 .articlesList{
     height: 100vh;
-    background-color: rgb(0, 4, 255);
+    
     display: flex;
     justify-content: center;
     width: 100%;
@@ -12,21 +12,34 @@
 }
 
 
-.listContainer{
+.listContainer h1{
+    font-size: 40px;
     position: relative;
-    bottom: -450px;
-    right: 400px;
-    margin: 20px;
-   
+    left: 20px;
+    color: rgb(0, 0, 0);
+    border-bottom: solid white;
 }
 
+.listContainer{
+    position: relative;
+    top: 550px;
+    margin: 20px;
+   
+   
+}
+.listContainer ul{
+    border: solid black;
+    border-radius: 10px;
+    padding: 30px;
+}
 .listContainer ul li {
     list-style: none;
+    
     
 }
 
 .listContainer ul li a{
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 30px;
     text-decoration: none;
     width: 300px;
@@ -35,7 +48,7 @@
 
 
 .listContainer ul {
-    background-color: hotpink;
+    
     width: 300px;
     height: 300px;
     margin: 20px;
@@ -59,4 +72,14 @@
 
 .nav{
     cursor:auto;
+}
+
+@media only screen and (min-width: 768px) {
+
+
+
+
+   
+
+
 }
