--- a/src/styles/article.style.css
+++ b/src/styles/article.style.css
@@ -1,10 +1,11 @@
 .article{
     height: 200vh;
     position: relative;
-    width: 400px;
-    left: 50%;
+    width: 300px;
+    left: 10%;
     top: -150px;
     margin-top: 300px;
+    box-shadow: 0 0 8px 8px white inset;
     
 
 }
@@ -19,5 +20,8 @@
 }
 
 .pictureInPost{
-    width: 400px;
+    position: relative;
+    width: 300px;
+    right: 10%;
+    box-shadow: 0 0 8px 8px white inset;
 }
