--- a/src/styles/home.style.css
+++ b/src/styles/home.style.css
@@ -3,7 +3,7 @@
     position: relative;
     opacity: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: red;
     color: white;
      display: flex;
      justify-content: center;
