--- a/src/styles/home.style.css
+++ b/src/styles/home.style.css
@@ -4,7 +4,7 @@
     opacity: 100%;
     height: 100vh;
 
-    background-color: rgb(0, 0, 0);
+    background: url('../media/alaverdiView.jpg');
     color: white;
 
 
