--- a/src/styles/home.style.css
+++ b/src/styles/home.style.css
@@ -1,136 +1,49 @@
-
-/* .headPage{
+.homeCss{
+    height: 300vh;
     position: relative;
-    opacity: 100%;
-    height: 100vh;
-
-    background: url('../media/alaverdiView.jpg');
-    color: white;
-
-
-    background-color: rgb(255, 0, 0);
-
-
-
-    color: black;
-
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     
- } */
-
-
-/*     
-.head h1{
-    font-size: 200px;
-    letter-spacing: 10px;
-    } */
-    
-.cont1{
-
-     height: 300vh;
-     
-     background: linear-gradient(55deg, #c400f5 0%, #1f86db 51%, #2cb5e8 85%)
-     
+    top: 50px;
 }
-  
-.head h1{
+
+.homeHeader{
+    height: 100vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeHeader h1{
+    margin-bottom: 150px;
     font-size: 40px;
-    letter-spacing: 10px;
+    letter-spacing: 12px;
+}
+
+
+
+.secondPic{
+    width: 380px;
+    height: 300px;
 }
 
 img{
-    position: relative;
-    left: 15px;
-    width: 270px;
-    margin: 10px;
-    
+    margin:10px;
+    margin-left: -3px;
+    padding: 10px;
+    width: 100%;
 }
 
+
+
 @media only screen and (min-width: 768px) {
-  
 
 
-    .seeme{
-        background-color: brown;
-        height: 100vh;
-        position: relative;
-    }
-
-    .head{
-        opacity: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .head h1{
-        font-size: 200px;
-        letter-spacing: 10px;
-    }
-    
-    .cont1{
-        height: 300vh;
-        background: linear-gradient(55deg, #c400f5 0%, #1f86db 51%, #2cb5e8 85%)
-    }
-    
-    
-    
-    img{
-        width: 400px;
-    }
-    
-    .firstPic{
-        position: absolute;
-        left: 190px;
-        top: 320px;
-    }
+.homeHeader h1{
+    font-size: 90px;
+}
 
 
-    
-    .secondPic{
-        position: absolute;
-        left: 490px;
-        top: 620px;
-    }
-    
-    .thirdPic{
-        position: absolute;
-        left: 890px;
-        top: 320px;
-    }
-    
-    .forthPic{
-        position: absolute;
-        left: 190px;
-        top: 1480px;
-    }
-    
-    .fifthPic{
-        position: absolute;
-        left: 990px;
-        top: 1400px;
-    }
 
-    .sixthPic{
-        position: absolute;
-        left: 990px;
-        top: 1900px;
-    }
 
-    .seventhPic{
-        position: absolute;
-        left: 520px;
-        top: 1820px;
-    }
 
-    .eighthPic{
-        position: absolute;
-        left: 90px;
-        top: 2000px;
-    }
-
-    
-  }
+}
