--- a/src/styles/home.style.css
+++ b/src/styles/home.style.css
@@ -1,5 +1,5 @@
 .homeCss{
-    height: 300vh;
+    height: 600vh;
     position: relative;
     top: 50px;
 }
@@ -42,7 +42,62 @@ img{
     font-size: 90px;
 }
 
+.homeCss{
+    height: 600vh;
+}
+.secondPic{
+    position: relative;
+    top: 200px;
+}
 
+.thirdPic, .forthPic, .fifthPic, .sixthPic, .seventhPic, .eighthPic{
+    position: relative;
+    top: 200px;
+    width: 300px;
+  
+}
+.secondPic{
+    position: relative;
+    left: 150px;
+    width: 1200px;
+    height: 100px;
+}
+.thirdPic{
+    top: 1200px;
+    left: 100px;
+    width: 700px;
+}
+
+.forthPic{
+    top: 700px;
+    left: 800px;
+    width: 700px;
+}
+
+
+.fifthPic{
+    top: 800px;
+    left: 820px;
+    width: 600px;
+}
+
+.sixthPic{
+    top: 800px;
+    left: 120px;
+    width: 600px;
+}
+
+.seventhPic{
+    top: 1300px;
+    left: 140px;
+    width: 600px;
+}
+
+.eighthPic{
+    top: 500px;
+    left: 860px;
+    width: 600px;
+}
 
 
 
